# stm32f1-template

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
include/: usart.h
src/: ld.stm32.basic  main.c  usart.c
